Update frontend and backend source code and prebuild. Update prebuild/deps for minicap