@@ -48,7 +48,7 @@ public class CommandLineUtil {
       String commandLine, List<String> output, boolean waitFor, int timeout)
       throws UicdExternalCommandException {
     timeout = (timeout == 0 ? EXECUTE_COMMAND_LINE_TIME_OUT_IN_SECONDS : timeout);
-    return execute(commandLine, output, waitFor, timeout, true);
+    return execute(commandLine, output, waitFor, timeout, /* showDetailLogging= */ false);
   }
 
   public static Process execute(
@@ -82,7 +82,7 @@ public class CommandLineUtil {
       cmd = args.toArray(cmd);
 
       logger.info("Execute shell command: " + String.join(" ", cmd));
-      p = Runtime.getRuntime().exec(cmd);
+      p = new ProcessBuilder(cmd).start();
 
       if (waitFor) {
         p.waitFor(timeout, TimeUnit.SECONDS);
@@ -93,7 +93,6 @@ public class CommandLineUtil {
         BufferedReader stdError =
             new BufferedReader(new InputStreamReader(p.getErrorStream(), UTF_8));
 
-        logger.info("Standard output of command:");
         while (stdInput.ready()) {
           String line = stdInput.readLine();
           output.add(line);
@@ -101,14 +100,14 @@ public class CommandLineUtil {
         // If output is too long, then front end will freeze
         int maxLineCount = Math.min(output.size(), LOGGER_MAX_SIZE);
         if (showDetailLogging) {
+          logger.info("Standard output of command:");
           for (int i = 0; i < maxLineCount; i++) {
             logger.info(output.get(i));
           }
-        }
-
-        // We want the backend to print out all of the output
-        for (int i = LOGGER_MAX_SIZE; i < output.size(); i++) {
-          System.out.println(output.get(i));
+          // We want the backend to print out all of the output
+          for (int i = LOGGER_MAX_SIZE; i < output.size(); i++) {
+            System.out.println(output.get(i));
+          }
         }
 
         if (stdError.ready()) {
